--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,12 @@
             <artifactId>json</artifactId>
             <version>20240303</version>
         </dependency>
-        
-        </dependencies>
+
+        <dependency>
+            <groupId>io.github.cdimascio</groupId>
+            <artifactId>java-dotenv</artifactId>
+            <version>5.2.2</version>
+        </dependency>
+    </dependencies>
 
 </project>
